--- a/client/staticwebapp.config.json
+++ b/client/staticwebapp.config.json
@@ -30,5 +30,14 @@
       "route": "/logout",
       "redirect": "/.auth/logout"
     }
-  ]
+  ],
+  "auth": {
+    "rolesSource": "/api/getRoles",
+    "identityProviders": {
+      "google": {
+        "clientIdSettingName": "GOOGLE_CLIENT_ID",
+        "clientSecretSettingName": "GOOGLE_CLIENT_SECRET"
+      }
+    }
+  }
 }
