Update static web app route configuration

--- a/client/staticwebapp.config.json
+++ b/client/staticwebapp.config.json
@@ -34,9 +34,9 @@
   "auth": {
     "rolesSource": "/api/getRoles",
     "identityProviders": {
-      "google": {
-        "clientIdSettingName": "GOOGLE_CLIENT_ID",
-        "clientSecretSettingName": "GOOGLE_CLIENT_SECRET"
+      "github": {
+        "clientIdSettingName": "GITHUB_CLIENT_ID",
+        "clientSecretSettingName": "GITHUB_CLIENT_SECRET"
       }
     }
   }
