Update static web app route configuration

--- a/client/staticwebapp.config.json
+++ b/client/staticwebapp.config.json
@@ -29,6 +29,14 @@
     {
       "route": "/logout",
       "redirect": "/.auth/logout"
+    },
+    {
+      "route": "/profile",
+      "methods": [
+        "get",
+        "post",
+        "put"
+      ]
     }
   ],
   "auth": {
